# libos

./: .gitignore  Cargo.toml  README.md
.cargo/: config
apps/heap-consumer/: Cargo.toml
apps/heap-consumer/src/: lib.rs
apps/hello-world/: Cargo.toml
apps/hello-world/src/: lib.rs
kernel-app/: Cargo.toml  build.rs
kernel-app/src/: main.rs
libs/calloc-trait/: Cargo.toml
libs/calloc-trait/src/: lib.rs
libs/calloc_impl/: Cargo.toml
libs/calloc_impl/src/: lib.rs
libs/calloc_impl/src/buddy/: mod.rs
libs/calloc_impl/src/link_list/: mod.rs
libs/cboot/: Cargo.toml
libs/cboot/src/: lib.rs
libs/cstdio/: Cargo.toml
libs/cstdio/src/: lib.rs
plat/cconsole/: Cargo.toml
plat/cconsole/src/: lib.rs
plat/qemu-loongarch/: Cargo.toml
plat/qemu-loongarch/src/: lib.rs
plat/qemu-riscv-virt/: Cargo.toml
plat/qemu-riscv-virt/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: generator.rs  main.rs  parse_dependence.rs
