[package]
name = "kernel-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { version = "0.1.0", path = "../apps/heap-consumer", package = "heap-consumer" }
cboot = { version = "0.1.0", path = "../libs/cboot", features = ["qemu-riscv-virt", "alloc"] }



[build-dependencies]
plat = { version = "0.1.0", path = "../plat/qemu-riscv-virt", package = "qemu-riscv-virt" }

