[package]
name = "calloc_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
linked_list_allocator = "0.9.1"
calloc-trait = {path="../calloc-trait"}


[features]
buddy = []
linked-list = []
